tests/reference/asr-matrix_matmul_04-90da47c.stderr
semantic error: `matmul` accepts arrays of rank 1 or 2 only, provided an array with rank, 3
 --> tests/errors/matrix_matmul_04.f90:5:21
  |
5 |     print *, matmul(a, b)
  |                     ^ 
